# Universal-MCP-Client

./: .env.example  .gitignore  LICENSE  PRD.md  PROGRESS.md  README.md  data.db  errors_i_found.md  mcp.json.example  pyproject.toml
.github/workflows/: ci.yml
docs/: PRD-v2-production-grade.md  architecture.excalidraw  request-flow.excalidraw
tests/: test_aggregator.py  test_cache.py  test_client.py  test_config.py  test_fallback_parser.py  test_filter.py  test_loop.py  test_retry.py  test_security.py  test_session.py  test_transports.py  test_validator.py
tests/fixtures/: mock_server.py
umcp/: __init__.py  aggregator.py  cache.py  cli.py  client.py  config.py  filter.py  log.py  loop.py  retry.py  security.py  session.py  trace.py  validator.py  web.py
umcp/adapters/: __init__.py  fallback.py  ollama.py
umcp/plugins/: __init__.py
umcp/prompts/: base.txt  fallback.txt
umcp/static/: index.html
umcp/transports/: __init__.py  base.py  http.py  sse.py  stdio.py
