[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "umcp"
version = "0.1.0"
description = "Universal MCP Client — local LLM (Ollama) + any MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.22.0",
    "structlog>=24.0.0",
    "anyio>=4.0.0",
    "rich>=13.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
umcp = "umcp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["umcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
